webcleaner (0.44) unstable; urgency=low

  * wc/filter/Compress.py: fix for compression of documents not calling
    filter() but only finish() function
  * add FAQ
  * get rid of 'python2' in rpm build

 -- Bastian Kleineidam <calvin@debian.org>  Tue, 11 Jun 2002 10:47:16 +0200

webcleaner (0.43) unstable; urgency=low

  * wc/parser/htmllex.l: fix segfault with unterminated end tags
  * wc/gui/ToolApp.py: factorize common app code
  * wc/gui/FXHeaderRuleFrame.py: dont accept empty header name
  * wc/parser/htmlsax.h: add error string
  * wc/parser/htmlparse.y: check error string
  * wc/gui/__init__.py: updated webcleanerconf documentation
  * wc/gui/ConfWindow.py, wc/filter/Rules.py: ground work for rules
    sorting
  * wc/gui/FXRuleTreeList.py: prepend rule type name on tree titles

 -- Bastian Kleineidam <calvin@debian.org>  Sat,  8 Jun 2002 13:56:22 +0200

webcleaner (0.42) unstable; urgency=low

  * wc/parser/htmllex.l: match doctype case insensitive
  * wc/filter/Rules.py: use search(), not match() for url matching
  * config/adverts.zap: added imdb and osdn ad-remover

 -- Bastian Kleineidam <calvin@debian.org>  Sun,  2 Jun 2002 22:18:17 +0200

webcleaner (0.41) unstable; urgency=low

  * wc/parser/htmllex.l:
    - fix sequential parsing of tags with numbers
    - fix resetting of bufpos
  * wc/filter/Compress.py: set modification time on each gzip-compress
  * wc/filter/Blocker.py: added more image extensions in regex

 -- Bastian Kleineidam <calvin@debian.org>  Sun,  2 Jun 2002 15:23:51 +0200

webcleaner (0.40) unstable; urgency=low

  * wc/filter/Rules.py: attribute names or values can be None
  * wc/parser/htmllex.l:
    catch stray newlines in attribute parsing
    throw exception if attribute or tag name is NULL
    use full option instead of fast

 -- Bastian Kleineidam <calvin@debian.org>  Sun,  2 Jun 2002 11:37:13 +0200

webcleaner (0.39) unstable; urgency=low

  * wc/parser/: various fixes for HTML comment and tag parsing