@@ -3,8 +3,8 @@
 <webcleaner
  version="0.9"
  port="9090"
- proxyuser=""
- proxypass=""
+ proxyuser="wummel"
+ proxypass="d3VtbWVs"
  parentproxyuser=""
  parentproxypass=""
  parentproxyport="8000"
@@ -18,5 +18,6 @@
 <filter name="Compress"/>
 <filter name="Rewriter"/>
 <filter name="Blocker"/>
+<filter name="BinaryCharFilter"/>
 <filter name="Header"/>
 </webcleaner>
