@@ -1,4 +1,4 @@
-import wc, os, sha, re, base64
+import wc, os, re, base64
 from FXRuleTreeList import FXRuleTreeList
 from FXRuleFrameFactory import FXRuleFrameFactory
 from FXFolderRuleFrame import FXFolderRuleFrame
@@ -375,7 +375,7 @@ class ConfWindow (ToolWindow):
 
 
     def onCmdProxyPass (self, sender, sel, ptr):
-        self.proxypass = sha.new(sender.getText()).hexdigest()
+        self.proxypass = base64.encodestring(sender.getText()).strip()
         self.getApp().dirty = 1
         #debug(BRING_IT_ON, "Proxy password was changed")
         return 1
@@ -433,7 +433,7 @@ class ConfWindow (ToolWindow):
 
 
     def onCmdParentProxyPass (self, sender, sel, ptr):
-        self.parentproxypass = base64.encodestring(sender.getText())
+        self.parentproxypass = base64.encodestring(sender.getText()).strip()
         self.getApp().dirty = 1
         #debug(BRING_IT_ON, "Parentproxypass was changed")
         return 1
