@@ -196,7 +196,7 @@ class HttpServer (Server):
         if self.bytes_remaining is not None:
             for ro in config['mime_content_rewriting']:
                 #debug(BRING_IT_ON, "content type", `self.headers.getheader('content-type')`)
-                if ro.match(self.headers.getheader('content-type') or ""):
+                if ro.match(self.headers.getheader('content-type')):
                     # remove content length
                     for h in self.headers.headers[:]:
                         if re.match('(?i)content-length:', h):
