@@ -1,11 +1,13 @@
 webcleaner (0.44) unstable; urgency=low
 
   * wc/filter/Compress.py: fix for compression of documents not calling
-    filter() but only finish() function
+    filter() but only finish() function (zlib.error: -2)
   * add FAQ
   * get rid of 'python2' in rpm build
+  * wc/__init__.py: add Compress module to the content-rewriting filters
+  * wc/gui/HeaderWindow.py: proxy authorization for wcheaders
 
- -- Bastian Kleineidam <calvin@debian.org>  Tue, 11 Jun 2002 10:47:16 +0200
+ -- Bastian Kleineidam <calvin@debian.org>  Wed, 12 Jun 2002 12:28:31 +0200
 
 webcleaner (0.43) unstable; urgency=low
 
